--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "dotenv-webpack": "^1.7.0",
     "express": "^4.17.1",
     "file-loader": "^4.2.0",
+    "js-cookie": "^2.2.1",
+    "jwt-decode": "^2.2.0",
     "lodash": "^4.17.15",
     "mini-css-extract-plugin": "^0.7.0",
     "moment": "^2.24.0",
@@ -24,7 +26,6 @@
     "next-images": "^1.1.2",
     "node-sass": "^4.12.0",
     "react": "^16.8.6",
-    "react-cookies": "^0.1.1",
     "react-date-range": "^1.0.0-beta",
     "react-dom": "^16.8.6",
     "sass-loader": "^7.1.0",
