--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "SET NODE_ENV=production & next start ./server.js -p $PORT"
   },
   "repository": "https://github.com/Nerdzonia/CloudFix.git",
-  "author": "raidou12 <icarodaviduarte@gmail.com>",
+  "author": "Icaro-Davi <icarodaviduarte@gmail.com>",
   "license": "MIT",
   "dependencies": {
     "axios": "^0.19.0",
